--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,13 @@ commands:
     steps:
     - ecr-image-build:
         image_name: ckan
+        directory: ckan
     - ecr-image-build:
         image_name: ckan-datapusher
+        directory: ckan-datapusher
     - ecr-image-build:
         image_name: ckan-solr
+        directory: ckan-solr
   push-containers:
     steps:
     - ecr-image-push:
@@ -62,7 +65,37 @@ commands:
             echo "Can't detect the version of awscli being used..."
             exit 1
           fi
-  ecr-image-build:
+  ecr-build-ckan:
+    parameters:
+      dockerfile:
+        type: string
+        default: Dockerfile
+      image_name:
+        type: string
+      directory:
+        type: string
+    steps:
+    - run:
+        name: Build << parameters.dockerfile >> docker image
+        command: |
+          cd "<< parameters.directory >>"
+          docker image build . -f "<< parameters.dockerfile >>" --tag "${AWS_ECR_ENDPOINT}/<< parameters.image_name >>:${CIRCLE_SHA1}"
+  ecr-build-ckan-datapusher:
+    parameters:
+      dockerfile:
+        type: string
+        default: Dockerfile
+      image_name:
+        type: string
+      directory:
+        type: string
+    steps:
+    - run:
+        name: Build << parameters.dockerfile >> docker image
+        command: |
+          cd "<< parameters.directory >>"
+          docker image build . -f "<< parameters.dockerfile >>" --tag "${AWS_ECR_ENDPOINT}/<< parameters.image_name >>:${CIRCLE_SHA1}"
+  ecr-build-ckan-solr:
     parameters:
       dockerfile:
         type: string
@@ -111,25 +144,6 @@ commands:
             }
             cd << parameters.folder >> || throw_error "FATAL: command 'cd << parameters.folder >>' has failed"
             terraform fmt -check -recursive
-  terraform-validate:
-    parameters:
-      folder:
-        type: string
-        description: A relative path from the project root in which to perform terrafrom validate
-      workspace:
-        type: string
-        description: A workspace in which to perform terraform validate
-    steps:
-      - deploy:
-          name: Terraform Validate Check
-          command: |
-            throw_error() {
-              echo $1
-              return 1
-            }
-            cd << parameters.folder >> || throw_error "FATAL: command 'cd << parameters.folder >>' has failed"
-            terraform workspace select << parameters.workspace >> || throw_error "FATAL: command 'terraform workspace select << parameters.workspace >>' has failed"
-            terraform validate || throw_error "FATAL: command 'terraform validate' has failed"
   terraform-init:
     parameters:
       folder:
@@ -166,49 +180,34 @@ commands:
             cd << parameters.folder >> || throw_error "FATAL: command 'cd << parameters.folder >>' has failed"
             terraform workspace select << parameters.workspace >> || throw_error "FATAL: command 'terraform workspace select << parameters.workspace >>' has failed"
             terraform plan -out=<< parameters.workspace >>.tfplan -input=false || throw_error "FATAL: command 'terraform plan -out=<< parameters.workspace >>.tfplan -input=false' has failed"
-  terraform-apply:
-    parameters:
-      folder:
-        type: string
-        description: A relative path from the project root in which to perform terrafrom apply
-      workspace:
-        type: string
-        description: A workspace in which to perform terraform apply
-    steps:
-      - deploy:
-          name: Terraform Apply
-          command: |
-            throw_error() {
-              echo $1
-              return 1
-            }
-            cd << parameters.folder >> || ( echo "directory << parameters.folder >> does not exist"; exit 1 )
-            terraform workspace select << parameters.workspace >> || ( echo "terraform workspace select << parameters.workspace >> has failed"; exit 1 )
-            terraform apply -input=false << parameters.workspace >>.tfplan || ( echo "terraform apply has failed"; exit 1 )
+  #terraform-apply:
+  #  parameters:
+  #    folder:
+  #      type: string
+  #      description: A relative path from the project root in which to perform terrafrom apply
+  #    workspace:
+  #      type: string
+  #      description: A workspace in which to perform terraform apply
+  #  steps:
+  #    - deploy:
+  #        name: Terraform Apply
+  #        command: |
+  #          throw_error() {
+  #            echo $1
+  #            return 1
+  #          }
+  #          cd << parameters.folder >> || ( echo "directory << parameters.folder >> does not exist"; exit 1 )
+  #          terraform workspace select << parameters.workspace >> || ( echo "terraform workspace select << parameters.workspace >> has failed"; exit 1 )
+  #          terraform apply -input=false << parameters.workspace >>.tfplan || ( echo "terraform apply has failed"; exit 1 )
 
 jobs:
-  test-terraform-validate:
-    executor: base
-    parameters:
-      workspace:
-        type: string
-        description: A terraform workspace name
-    steps:
-      - checkout
-      - aws-init
-      - terraform-install
-      - terraform-init:
-          folder: terraform
-      - terraform-validate:
-          folder: terraform
-          workspace: << parameters.workspace >>
   test-terraform-format:
     executor: base
     steps:
       - checkout
       - terraform-install
       - terraform-format:
-          folder: terraform
+          folder: terraform/applications
   test-terraform-plan:
     executor: base
     parameters:
@@ -220,11 +219,11 @@ jobs:
       - aws-init
       - terraform-install
       - terraform-init:
-          folder: terraform
+          folder: terraform/applications
       - terraform-plan:
-          folder: terraform
+          folder: terraform/applications
           workspace: << parameters.workspace >>
-  build-containers:
+  test-ckan-build:
     executor: circle-machine
     steps:
       - checkout
@@ -232,59 +231,96 @@ jobs:
           name: aws-env
           command: |
             echo 'AWS_ECR_ENDPOINT="ecr-temp"' >> $BASH_ENV
-      - build-containers
-  build-and-push-containers:
-    executor: base
+      - ecr-build-ckan:
+          directory: ckan
+          image_name: ckan
+  test-ckan-datapusher-build:
+    executor: circle-machine
     steps:
-    - checkout
-    - setup_remote_docker:
-        docker_layer_caching: true
-    - aws-init
-    - ecr-login
-    - ecr-image-build:
-        directory: ckan
-        image_name: ckan
-    - ecr-image-push:
-        directory: ckan
-        image_name: ckan-datapusher
-    - ecr-image-push:
-        directory: ckan
-        image_name: ckan-solr
-  deploy-service:
-    executor: base
-    parameters:
-      workspace:
-        type: string
-        description: A terraform workspace name
+      - checkout
+      - run:
+          name: aws-env
+          command: |
+            echo 'AWS_ECR_ENDPOINT="ecr-temp"' >> $BASH_ENV
+      - ecr-build-ckan-datapusher:
+          directory: ckan-datapusher
+          image_name: ckan-datapusher
+  test-ckan-solr-build:
+    executor: circle-machine
+    steps:
+      - checkout
+      - run:
+          name: aws-env
+          command: |
+            echo 'AWS_ECR_ENDPOINT="ecr-temp"' >> $BASH_ENV
+      - ecr-build-ckan-solr:
+          directory: ckan-solr
+          image_name: ckan-solr
+  ckan-build-push:
+    executor: circle-machine
     steps:
       - checkout
       - aws-init
-      - terraform-install
-      - terraform-init:
-          folder: terraform
-      - terraform-plan:
-          folder: terraform
-          workspace: << parameters.workspace >>
-      - terraform-apply:
-          folder: terraform
-          workspace: << parameters.workspace >>
+      - ecr-login
+      - ecr-build-ckan:
+          directory: ckan
+          image_name: ckan
+      - ecr-image-push:
+          image_name: ckan
+  ckan-datapusher-build:
+    executor: circle-machine
+    steps:
+      - checkout
+      - aws-init
+      - ecr-login
+      - ecr-build-ckan-datapusher:
+          directory: ckan-datapusher
+          image_name: ckan-datapusher
+      - ecr-image-push:
+          image_name: ckan-datapusher
+  ckan-solr-build:
+    executor: circle-machine
+    steps:
+      - checkout
+      - aws-init
+      - ecr-login
+      - ecr-build-ckan-solr:
+          directory: ckan-solr
+          image_name: ckan-solr
+      - ecr-image-push:
+          image_name: ckan-solr
+  #deploy-service:
+  #  executor: base
+  #  parameters:
+  #    workspace:
+  #      type: string
+  #      description: A terraform workspace name
+  #  steps:
+  #    - checkout
+  #    - aws-init
+  #    - terraform-install
+  #    - terraform-init:
+  #        folder: terraform
+  #    - terraform-plan:
+  #        folder: terraform
+  #        workspace: << parameters.workspace >>
+  #    - terraform-apply:
+  #        folder: terraform
+  #        workspace: << parameters.workspace >>
 
 workflows:
   version: 2
   tests:
     jobs:
-    - test-terraform-validate:
-        context: sba-gov-upper
     - test-terraform-format
-    - build-containers
+    - test-ckan-build
+    - test-ckan-datapusher-build
+    - test-ckan-solr-build
   deploy:
     jobs:
-    - deploy-service:
-        name: deploy-service-stg
+    - ckan-build-push:
+        name: ckan-build-push
         context: sba-gov-upper
-        workspace: stg
-        requires:
-          - build-and-push-containers-upper
         filters:
           branches:
             ignore:
@@ -293,40 +329,66 @@ workflows:
             only:
             - /rc-v[0-9]+(\.[0-9]+)*$/
     - test-terraform-plan:
-        name: test-terraform-plan-prod
+        name: test-terraform-plan-stg
         context: sba-gov-upper
-        workspace: prod
+        workspace: staging
         requires:
-        - build-and-push-containers-upper
+        - ckan-build-push
         filters:
           branches:
             ignore:
             - /.*/
           tags:
             only:
-            - /v[0-9]+(\.[0-9]+)*$/
-    - hold-for-approval:
-        type: approval
-        context: sba-gov-upper
-        requires:
-          - test-terraform-plan-prod
-        filters:
-          branches:
-            ignore:
-            - /.*/
-          tags:
-            only:
-            - /v[0-9]+(\.[0-9]+)*$/
-    - deploy-service:
-        name: deploy-service-prod
-        context: sba-gov-upper
-        workspace: prod
-        requires:
-        - hold-for-approval
-        filters:
-          branches:
-            ignore:
-            - /.*/
-          tags:
-            only:
-            - /v[0-9]+(\.[0-9]+)*$/
+            - /rc-v[0-9]+(\.[0-9]+)*$/
+  #  - deploy-service:
+  #      name: deploy-service-stg
+  #      context: sba-gov-upper
+  #      workspace: stg
+  #      requires:
+  #        - build-and-push-containers-upper
+  #      filters:
+  #        branches:
+  #          ignore:
+  #          - /.*/
+  #        tags:
+  #          only:
+  #          - /rc-v[0-9]+(\.[0-9]+)*$/
+  #  - test-terraform-plan:
+  #      name: test-terraform-plan-prod
+  #      context: sba-gov-upper
+  #      workspace: prod
+  #      requires:
+  #      - build-and-push-containers-upper
+  #      filters:
+  #        branches:
+  #          ignore:
+  #          - /.*/
+  #        tags:
+  #          only:
+  #          - /v[0-9]+(\.[0-9]+)*$/
+  #  - hold-for-approval:
+  #      type: approval
+  #      context: sba-gov-upper
+  #      requires:
+  #        - test-terraform-plan-prod
+  #      filters:
+  #        branches:
+  #          ignore:
+  #          - /.*/
+  #        tags:
+  #          only:
+  #          - /v[0-9]+(\.[0-9]+)*$/
+  #  - deploy-service:
+  #      name: deploy-service-prod
+  #      context: sba-gov-upper
+  #      workspace: prod
+  #      requires:
+  #      - hold-for-approval
+  #      filters:
+  #        branches:
+  #          ignore:
+  #          - /.*/
+  #        tags:
+  #          only:
+  #          - /v[0-9]+(\.[0-9]+)*$/
